Stamp out warnings from Eclipse and FindBugs in plugin.*  Does not include any attempt to provide or remove @Override
Includes the following actions:
 Remove .toString() calls on items that are already Strings
 Add Generics to (most) Lists, Maps, etc.
 Often use Java 1.5 for loop to resolve Generics
 String += assignment in loops converted to use StringBuffer
 Remove useless == or != null checks
 Use Map.Entry in loops rather than key and Map.get(key)
 Prohibit (most) reassignment of parameters
 Number (Integer, Float) conversion to String via '+ ""' changed to .toString() methods
 Use List rather than Vector where possible
 Make Inner Classes static where possible
 Avoid useless object construction and dead local stores
 Make public static constants also final
 Remove useless '== true' checks in conditionals (If statements)
 Use Character.valueOf() not new Character()
 Eliminate useless imports

Also, some code refactoring/reuse, through the creation of:
 CollectionUtilities.joinStringRepresentations (acts much the same as perl's join method)

Potential 'significant' changes: 
 Inlines to the previous assignment an otherwise useless .trim() call in WeaponSpecialPane.java
 Change File == null check to a .exists() check in EncounterPlugin.java and EnvironmentModel.java
 Changed a String != check to !string.equals(string2) check in Initiative.java
 Delete LanguagesToken.getLanguagesToken() as the intent reproduces List.subList()


git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@1520 ef53c05b-3124-4d59-ae7d-fe3273f42be7